Resolves: tdf#158441 we don't want to return early for all handled keys

a problem since:

commit c39bd1f6690ade936d62a66265b9b277061024d8
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Wed Feb 19 10:13:15 2020 +0000

    weld CodeCompleteWindow

Change-Id: I520a591bad89515c973098f4200f01ae0ddbdc34
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160337
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>